--- a/css/app.css
+++ b/css/app.css
@@ -2138,6 +2138,26 @@ h6 {
         padding: 10px 0
     }
 }
+.loading {
+    /* display: none; */
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+    /* left: calc(50% - 20px); */
+    /* top: calc(50% - 20px); */
+}
+.loading img {
+    animation:turn 1.5s linear infinite;
+    width: 100%;
+    height: 100%;
+}
+@keyframes turn{
+    0%{-webkit-transform:rotate(0deg);}
+    25%{-webkit-transform:rotate(90deg);}
+    50%{-webkit-transform:rotate(180deg);}
+    75%{-webkit-transform:rotate(270deg);}
+    100%{-webkit-transform:rotate(360deg);}
+}
 .video-img {
     width: 100%;
 }
