--- a/css/app.css
+++ b/css/app.css
@@ -1136,7 +1136,7 @@ h6 {
     background-color: #fff;
     -webkit-box-shadow: 0 2px 4px -2px rgba(33, 37, 41, .08);
     box-shadow: 0 2px 4px -2px rgba(33, 37, 41, .08);
-    padding: 0 20px 20px;
+    padding: 0 30px 20px;
     word-break: break-all
 }
 
@@ -2182,6 +2182,37 @@ h6 {
 
 #photo .img {
     background: none;
+}
+.btn-buy-go {
+    display: block;
+    margin: 0 auto;
+    width: 80%;
+    box-sizing: border-box;
+    touch-action: manipulation;
+    padding: 1.0625em 1.875em;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 1em;
+    line-height: 1.133;
+    -webkit-font-smoothing: antialiased;
+    text-align: center;
+    user-select: none;
+    -webkit-appearance: none;
+    cursor: pointer;
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
+    background-color: #5c6ac4;
+    color: #ffffff;
+    border-width: 0;
+    border-style: solid;
+    border-color: transparent;
+    text-decoration: none;
+}
+.btn-buy-box {
+    margin: 0 auto;
+}
+.btn-buy-go:hover {
+    text-decoration: none;
+    color: #fff;
 }
 .type-color-1 {
     color: rgba(239, 87, 119, 1);
