--- a/css/app.css
+++ b/css/app.css
@@ -1297,7 +1297,7 @@ h6 {
     margin: -5px
 } */
 .caption p {
-    padding: 5px 0;
+    padding: 8px 0;
 }
 
 #yoo-post .share p a {
@@ -1310,6 +1310,7 @@ h6 {
 }
 
 #yoo-post .tags ul {
+    width: 100%;
     margin: -5px -5px 15px;
     /* max-height: 160px; */
     overflow: hidden
@@ -2183,10 +2184,19 @@ h6 {
 #photo .img {
     background: none;
 }
+.v-desc-info span {
+    font-size: 12px;
+}
+.v-desc-box {
+    width: 100%;
+}
+.v-url {
+    color: #666;
+    line-height: 1.5em;
+}
 .btn-buy-go {
-    display: block;
-    margin: 0 auto;
-    width: 80%;
+    float: right;
+    margin-left: 15px;
     box-sizing: border-box;
     touch-action: manipulation;
     padding: 1.0625em 1.875em;
@@ -2209,6 +2219,9 @@ h6 {
 }
 .btn-buy-box {
     margin: 0 auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row-reverse;
 }
 .btn-buy-go:hover {
     text-decoration: none;
