--- a/css/app.css
+++ b/css/app.css
@@ -2222,7 +2222,7 @@ h6 {
     justify-content: space-between;
     align-items: center;
 }
-@media(min-width: 320px) {
+@media(max-width: 360px) {
     .v-flex1 {
         display: block;
     }
