--- a/css/app.css
+++ b/css/app.css
@@ -1604,13 +1604,13 @@ h6 {
     -webkit-box-shadow: 2px 2px 0 rgba(0, 87, 255, .02);
     box-shadow: 2px 2px 0 rgba(0, 87, 255, .02);
     color: #fff;
-    display: inline-block;
+    display: block;
     margin: 5px;
     padding: 0 15px;
-    height: 40px;
-    line-height: 38px;
-    cursor: pointer;
-    text-align: center;
+    /* height: 40px; */
+    /* line-height: 38px; */
+    /* cursor: pointer; */
+    /* text-align: center; */
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out
 }
@@ -1640,11 +1640,11 @@ h6 {
 
 .button-sm {
     display: inline-block;
-    height: 30px;
-    line-height: 28px;
+    /* height: 30px; */
+    line-height: 24px;
     border-radius: 30px;
     font-weight: 500;
-    white-space: nowrap;
+    /* white-space: nowrap; */
 }
 
 #yoo-loading .button,
