--- a/css/index.css
+++ b/css/index.css
@@ -175,7 +175,7 @@ main::after {
     clear: both
 }
 
-@font-face {
+/* @font-face {
     font-family: "ShopifySans";
     src: url("https://cdn.shopify.com/shopify-marketing_assets/static/ShopifySans--light.woff2") format("woff2");
     font-style: normal;
@@ -221,7 +221,7 @@ main::after {
     font-style: normal;
     font-weight: 900;
     font-display: swap
-}
+} */
 
 body {
     -webkit-font-smoothing: antialiased;
@@ -8383,4 +8383,32 @@ only screen and (min-width: 46.875em) and (min-resolution: 1.3dppx) {
 
 .noCall-success-modal-wrapper .content .btn {
     margin-bottom: 16px
+}
+
+@media screen and (max-width: 768px) {
+    .form-wrapper .form-block .form-item:first-child {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .form-wrapper .form-block {
+        margin-bottom: 10px;
+    }
+
+    .advertise-wrapper {
+        padding: 20px 0;
+    }
+
+    .advertise-wrapper .title-wrapper {
+        margin-bottom: 30px;
+    }
+
+    .advertise-wrapper h2 {
+        font-size: 24px;
+    }
+
+    .advertise-wrapper h3 {
+        font-size: 14px;
+
+    }
 }
